--- a/JSP1/src/main/webapp/index.html
+++ b/JSP1/src/main/webapp/index.html
@@ -21,29 +21,29 @@
 
   <h2>회원 가입</h2>
   <form action="/signUp" method="post">
-    <table style="text-align:left;">
+    <table>
       <tr>
-        <th>아이디 : </th>
+        <td>아이디 : </td>
         <td><input type="text" name="inputId" required></td>
       </tr>
       <tr>
-        <th>비밀번호 : </th>
+        <td>비밀번호 : </td>
         <td><input type="password" name="inputPw" required></td>
       </tr>
       <tr>
-        <th>비밀번호 확인 : </th>
+        <td>비밀번호 확인 : </td>
         <td><input type="password" name="inputPw2" required></td>
       </tr>
       <tr>
-        <th>이름 : </th>
+        <td>이름 : </td>
         <td><input type="text" name="inputName" required></td>
       </tr>
       <tr>
-        <th>나이 :</th>
+        <td>나이 :</td>
         <td><input type="number" name="inputAge" required></td>
       </tr>
       <tr>
-      	<th></th>
+      	<td></td>
       	<td><button>회원 가입</button></td>
       </tr>
     </table>
